--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.23",
+    "cssnano": "^7.1.2",
     "js-beautify": "^1.15.4",
     "next": "16.1.1",
+    "postcss": "^8.5.6",
+    "postcss-custom-properties": "^14.0.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwindcss-v3": "npm:tailwindcss@^3.4.19"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
