--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.23",
+    "cheerio": "^1.1.2",
     "cssnano": "^7.1.2",
     "js-beautify": "^1.15.4",
     "next": "16.1.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/cheerio": "^0.22.35",
     "@types/js-beautify": "^1.14.3",
     "@types/node": "^20",
     "@types/react": "^19",
